--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 }
 #pantalla{
     width: 100%;
-    height: 20rem;
+    height: 15rem;
     border-radius: 10px 10px 0px 0px;
     padding: 2px;
 }
@@ -32,3 +32,7 @@ body{
 .col{
     margin: 5px;
 }
+
+p {
+    line-height: 0.5; /* un valor menor a 1 */
+  }
